--- a/tkg/04-tkg-log-collector-ds.yaml
+++ b/tkg/04-tkg-log-collector-ds.yaml
@@ -14,7 +14,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: fluentd-config
-  namespace: tanzu-system-logging
+  namespace: kube-system
 data:
   fluent.conf: |
     <source>
@@ -72,7 +72,7 @@ data:
         ssl_verify false
         # Loginsight host: One may use IP address or cname
         # host X.X.X.X
-        host loginsight.haas-239.pez.pivotal.io
+        host loginsight.haas-272.pez.pivotal.io
         port 9543
         path api/v1/events/ingest
         agent_id XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
@@ -95,7 +95,7 @@ kind: DaemonSet
 apiVersion: apps/v1
 metadata:
   name: "log-collector"
-  namespace: "tanzu-system-logging"
+  namespace: "kube-system"
   labels:
     app: "log-collector"
     version: v1
@@ -112,7 +112,7 @@ spec:
     spec:
       containers:
         - name: "log-collector"
-          image: "thekoguryo/log-insight-fluentd:1.0.3"
+          image: "thekoguryo/log-insight-fluentd:1.0.5"
           command: ["fluentd", "-c", "/fluentd/etc/fluent.conf", "-p", "/fluentd/plugins"]
           resources:
             requests:
@@ -132,6 +132,22 @@ spec:
             - name: fluentdconfig
               mountPath: /fluentd/etc
       terminationGracePeriodSeconds: 30
+      nodeSelector:
+        beta.kubernetes.io/os: linux
+      priorityClassName: system-node-critical
+      restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      serviceAccount: calico-node
+      serviceAccountName: calico-node
+      terminationGracePeriodSeconds: 0
+      tolerations:
+      - effect: NoSchedule
+        operator: Exists
+      - key: CriticalAddonsOnly
+        operator: Exists
+      - effect: NoExecute
+        operator: Exists
       volumes:
         - name: varlog
           hostPath:
